[gd_scene load_steps=4 format=2]

[ext_resource path="res://stages/stage1/wave2/Wave2.gd" type="Script" id=1]
[ext_resource path="res://stages/stage1/wave2/Path.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 511.41, -73.6175, 0, 0, 0, 0, 512.271, 103.678, 23.9007, 39.2438, -23.9007, -39.2438, 463.247, 50.6546, 0, 0, 0, 0, 420.653, -214.95 )
}

[node name="Wave2" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [ 783.969, 239.969, 511.75 ]
}

[node name="Path" type="Path2D" parent="."]
position = Vector2( -0.721634, 12.457 )
curve = SubResource( 1 )
script = ExtResource( 2 )

[node name="EnemySpawnTimer" type="Timer" parent="Path"]

[node name="PathFollow2D" type="PathFollow2D" parent="Path"]
position = Vector2( 512.124, 101.551 )
rotation = -2.9555
offset = 175.252

[node name="WaveDurationTimer" type="Timer" parent="."]

[connection signal="timeout" from="Path/EnemySpawnTimer" to="Path" method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="WaveDurationTimer" to="." method="_on_WaveDurationTimer_timeout"]
